# vhs-diff

./: .gitignore  Cargo.toml  README.md
lib/: Cargo.toml  game.json
lib/benches/: games.rs
lib/src/: lib.rs  patch_seq.rs  rkyv_seq.rs
lib/tests/: encode_game.rs
macros/: Cargo.toml
macros/src/: lib.rs
